Fix padding on mobile

--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@ body, html {
 
 @media screen and (max-width: 800px) {
    .hero-image{
-    padding-left:1%;
-    padding-right:1%
+    height:90%
 }
 
 }
